...
                                    <constraint firstAttribute="height" constant="40" id="jIs-cp-21e"/>
                                </constraints>
                                <state key="normal" title="Pay Now"/>
                                <connections>
                                    <action selector="payButtonTapped:" destination="wox-rn-42m" eventType="touchUpInside" id="ido-Mk-qGV"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Activity" id="8Qb-mT-QAq"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                    <connections>
...
                                    <constraint firstAttribute="width" constant="50" id="rFe-EM-bbn"/>
                                </constraints>
                                <state key="normal" image="edit"/>
                                <connections>
                                    <segue destination="LoA-NY-dJ5" kind="show" identifier="segueToProfileEdit" id="MX5-eG-AeF"/>
...
                                    <constraint firstAttribute="height" constant="40" id="lwA-Qq-Ljo"/>
                                </constraints>
                                <state key="normal" title="Log Out">
                                    <color key="titleColor" red="0.78992798289999999" green="0.35112627097857274" blue="0.080874840005065521" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                <color key="backgroundColor" red="0.21227260452902344" green="0.72222222222222221" blue="0.098522010378563632" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Manage Payment"/>
                                <connections>
                                    <segue destination="AKp-Uf-jpw" kind="show" identifier="profileToPaymentSegue" id="Lg0-n3-dUq"/>
...
                        <barButtonItem id="mkX-Xn-xpf"/>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Profile" id="dKA-hb-U5i"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
...
                                <color key="backgroundColor" red="0.21227260449999999" green="0.72222222219999999" blue="0.098522010379999997" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Add Card"/>
                                <connections>
                                    <segue destination="6Pt-rF-4DL" kind="show" id="Wdp-Ew-5fA"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Payment Cards" id="LSo-0G-uav">
                        <barButtonItem key="backBarButtonItem" title="Back" id="ptK-me-adK"/>
                    </navigationItem>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
...
                                            <constraint firstAttribute="height" constant="40" id="lJJ-dA-bSX"/>
                                        </constraints>
                                        <state key="normal" title="Save" image="save"/>
                                        <variation key="default">
                                            <mask key="constraints">
...
                                <color key="backgroundColor" red="0.21227260449999999" green="0.72222222219999999" blue="0.098522010379999997" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Save Card"/>
                                <connections>
                                    <action selector="saveButtonTapped:" destination="6Pt-rF-4DL" eventType="touchUpInside" id="JtS-FJ-9tF"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email:" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="EAg-Z2-EMT" customClass="InteractiveUITextField" customModule="Peeq" customModuleProvider="ta
                                <rect key="frame" x="16" y="149" width="288" height="30"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password:" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="FTa-Az-P7u" customClass="InteractiveUITextField" customModule="Peeq" customModuleProvider=
                                <rect key="frame" x="16" y="210" width="288" height="30"/>
                                <constraints>
...
                                </constraints>
                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nathan Downer" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TKK-mm-kaV" customClass="TextFitLabel" customModule="Peeq" c
                                                    <rect key="frame" x="76" y="12" width="100" height="16"/>
                                                    <constraints>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Discover" id="xG3-hx-jmG"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                    <connections>
...
                                        </constraints>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="Ask Him"/>
                                        <connections>
                                            <segue destination="wox-rn-42m" kind="show" identifier="askToPayment" id="bHf-mE-1Xg"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mRw-qN-LLF" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Me" image="ic_person" id="xaE-nT-LjV"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="G8N-XE-r6q">
...
