...
    return view
  }()

  lazy var cancelButton: UIButton = {
    let button = UIButton()
    button.setTitleColor(UIColor(red: 78/255, green: 78/255, blue: 78/255, alpha: 0.6), for: UIControlState())
    button.setTitle("Cancel", for: UIControlState())
    return button
  }()

  lazy var buyCoinsButton: UIButton = {
    let button = UIButton()
    button.setTitle("Buy Coins", for: UIControlState())
...
